reafactor : 회원정보 보기 기능 구현을 위해 메시지 응답에 회원정보 추가